force-app/main/default/objects/AccessToken__c/AccessToken__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to save the Token Details</description>
    <label>Access Token</label>
</CustomObject>