force-app/main/default/objects/AccessToken__c/fields/ExpirationTime__c.field-meta.xml
<CustomField>
    <fullName>ExpirationTime__c</fullName>
    <description>This field will be saving the token expiry time</description>
    <label>ExpirationTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>