force-app/main/default/objects/AccessToken__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>This field will be saving the message</description>
    <label>Message</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>