force-app/main/default/objects/AccessToken__c/fields/Token10__c.field-meta.xml
<CustomField>
    <fullName>Token10__c</fullName>
    <description>This field will be saving the token received</description>
    <label>Token10</label>
    <type>TextArea</type>
</CustomField>