force-app/main/default/objects/AccessToken__c/fields/Token11__c.field-meta.xml
<CustomField>
    <fullName>Token11__c</fullName>
    <description>This field will be saving the token received</description>
    <label>Token11</label>
    <type>TextArea</type>
</CustomField>