force-app/main/default/objects/AccessToken__c/fields/Token12__c.field-meta.xml
<CustomField>
    <fullName>Token12__c</fullName>
    <description>This field will be saving the token received</description>
    <label>Token12</label>
    <type>TextArea</type>
</CustomField>